--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>Levanta esos animos ✨😸 </span>
+        <span>Bella y dulce Sol ☀️, levanta esos ánimos 💪💖 </span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="carta.html" style="color: #fff;">Presiona para alegrarte 🎉</a>
+            <a href="carta.html" style="color: #fff;">Presiona para sonreir 🎉</a>
         </button>
     </div>
 
     <!-- Créditos -->
     <div class="credits">
-        <p>Eres una persona muy fuerte ✨☀️</p>
+        <p>Eres de verdad una persona muy fuerte ✨☀️</p>
     </div>
 </body>
 
