--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>Bella y dulce Sol ☀️, levanta esos ánimos 💪💖 </span>
+        <span>Bella y dulce Sol ☀️ levanta esos ánimos ✨💪</span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="carta.html" style="color: #fff;">Presiona para sonreir 🎉</a>
+            <a href="carta.html" style="color: #fff;">Presiona para sonreir 😸🎉</a>
         </button>
     </div>
 
