--- a/carta.html
+++ b/carta.html
@@ -13,7 +13,7 @@
       <div class="cover"></div>
       <span class="heart">☺</span>
       <p class="paper" id="mainMessage">
-        Sol ☀️, recuerda siempre que eres una persona maravillosa 💖. A pesar de llevar muchas cargas 😔, sigues adelante con tu hermoso brillo ✨🍓. Que nunca se te olvide lo increíble que eres 🌟. Te quiero🤗
+        Sol ☀️, recuerda siempre que eres una persona maravillosa 💖. A pesar de llevar muchas cargas 😔, sigues adelante con tu hermoso brillo ✨🍓. Que nunca se te olvide lo increíble que eres 🌟. Te quiero 🤗.
       </p>
       <div class="letter"></div>
     </div>
