--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>Bella y dulce Sol ☀️ levanta esos ánimos ✨💪</span>
+        <span>Bella y dulce Sol ☀️ levanta esos ánimos 💪</span>
     </div>
     <div class="button">
         <button class="botones">
